--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:background="@null"
-        android:src="@drawable/onebullet"
+        android:src="@drawable/buttons_green"
         android:onClick="modifyFireMode"/>
 
     <!-- スコア表示 -->
@@ -65,6 +65,40 @@
         android:textColor="@color/white"
         android:textSize="10pt" />
 
+    <!-- 必殺ボタン -->
+    <ImageButton
+        android:id="@+id/specialbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/imagebutton"
+        android:layout_marginBottom="2dp"
+        android:background="@null"
+        android:visibility="gone"
+        android:src="@drawable/buttons_special"
+        android:onClick="touchSpecialButton"/>
+
+    <!-- 攻撃力表示 -->
+    <TextView
+        android:id="@+id/atktext"
+        android:layout_width="50pt"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/imagebutton"
+        android:layout_marginBottom="2dp"
+        android:text=" ATK: 1"
+        android:textColor="@color/white"
+        android:textSize="10pt" />
+
+    <!-- アイテム表示 -->
+    <TextView
+        android:id="@+id/itemtext"
+        android:layout_width="50pt"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/atktext"
+        android:layout_marginBottom="2dp"
+        android:text=" Item: 1"
+        android:textColor="@color/white"
+        android:textSize="10pt" />
+
     <!-- 設定ボタン -->
     <ImageButton
         android:id="@+id/settingimagebutton"
@@ -76,7 +110,7 @@
         android:layout_marginStart="316dp"
         android:layout_marginEnd="3dp"
         android:layout_marginBottom="4dp"
-        android:onClick="clickSetting"
+        android:onClick="touchSetting"
         android:background="@null"
         android:src="@drawable/set" />
 
@@ -88,9 +122,9 @@
         android:textColor="@color/white"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
+        android:visibility="gone"
+        android:layout_above="@id/explanation"/>
 
     <!-- 説明テキスト -->
     <TableLayout
@@ -98,25 +132,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:visibility="gone"
-        android:layout_below="@id/pose"
         android:background="@color/black">
-
-        <TableRow android:gravity="center_vertical">
-
-            <ImageView
-                android:layout_width="16pt"
-                android:layout_height="16pt"
-                android:src="@drawable/player2" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="10dp"
-                android:text="player"
-                android:textColor="@color/white"
-                android:textSize="16pt" />
-        </TableRow>
 
         <TableRow
             android:layout_marginTop="2pt"
@@ -125,13 +143,13 @@
             <ImageView
                 android:layout_width="16pt"
                 android:layout_height="16pt"
-                android:src="@drawable/enemy" />
+                android:src="@drawable/enemies_default" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
-                android:text="enemy"
+                android:text="Enemy"
                 android:textColor="@color/white"
                 android:textSize="16pt" />
         </TableRow>
@@ -143,49 +161,13 @@
             <ImageView
                 android:layout_width="16pt"
                 android:layout_height="16pt"
-                android:src="@drawable/doublebullets" />
+                android:src="@drawable/buttons_green" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
-                android:text="mode change"
-                android:textColor="@color/white"
-                android:textSize="16pt" />
-        </TableRow>
-
-        <TableRow
-            android:layout_marginTop="2dp"
-            android:gravity="center_vertical">
-
-            <ImageView
-                android:layout_width="16pt"
-                android:layout_height="16pt"
-                android:src="@drawable/bullet2" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="10dp"
-                android:text="player's bullet"
-                android:textColor="@color/white"
-                android:textSize="16pt" />
-        </TableRow>
-
-        <TableRow
-            android:layout_marginTop="2dp"
-            android:gravity="center_vertical">
-
-            <ImageView
-                android:layout_width="16pt"
-                android:layout_height="16pt"
-                android:src="@drawable/enemybullet" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="10dp"
-                android:text="enemy's bullet"
+                android:text="Mode Change"
                 android:textColor="@color/white"
                 android:textSize="16pt" />
         </TableRow>
@@ -198,15 +180,114 @@
             <ImageView
                 android:layout_width="22pt"
                 android:layout_height="22pt"
-                android:src="@drawable/item" />
+                android:src="@drawable/items_energy" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
-                android:text="power up item"
+                android:text="ATK UP"
                 android:textColor="@color/white"
                 android:textSize="16pt" />
         </TableRow>
+
+        <TableRow
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:layout_width="22pt"
+                android:layout_height="22pt"
+                android:src="@drawable/black" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:text="-Weaknesses-"
+                android:textColor="@color/white"
+                android:textSize="16pt" />
+
+            <ImageView
+                android:layout_width="22pt"
+                android:layout_height="22pt"
+                android:src="@drawable/black" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:layout_width="22pt"
+                android:layout_height="22pt"
+                android:src="@drawable/bullets_green" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:text="     →"
+                android:textColor="@color/white"
+                android:textSize="16pt" />
+
+            <ImageView
+                android:layout_width="22pt"
+                android:layout_height="22pt"
+                android:src="@drawable/enemies_green" />
+        </TableRow>
+
+        <TableRow
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:layout_width="22pt"
+                android:layout_height="22pt"
+                android:src="@drawable/bullets_pink" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:text="     →"
+                android:textColor="@color/white"
+                android:textSize="16pt" />
+
+            <ImageView
+                android:layout_width="22pt"
+                android:layout_height="22pt"
+                android:src="@drawable/enemies_pink" />
+        </TableRow>
+
+        <TableRow
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:layout_width="22pt"
+                android:layout_height="22pt"
+                android:src="@drawable/bullets_yellow" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:text="     →"
+                android:textColor="@color/white"
+                android:textSize="16pt" />
+
+            <ImageView
+                android:layout_width="22pt"
+                android:layout_height="22pt"
+                android:src="@drawable/enemies_yellow" />
+        </TableRow>
+
     </TableLayout>
+
 </RelativeLayout>
