--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -10,6 +10,7 @@
     android:gravity="center">
 
     <TextView
+        android:id="@+id/endLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="GAME END"
