--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -37,7 +37,7 @@
         android:scaleType="centerCrop"
         android:scaleX="2"
         android:scaleY="2"
-        android:src="@drawable/player2" />
+        android:src="@drawable/player" />
 
     <!-- タイトル -->
     <TextView
